__attribute__((used)) static void
memdiffs(unsigned char *p1, unsigned char *p2, unsigned nb, unsigned maxpr)
{
 unsigned n, prt;

 prt = 0;
 for( n = nb; n > 0; --n )
  if( *p1++ != *p2++ )
   if( ++prt <= maxpr )
    printf("%.16x %.2x # %.16x %.2x\n", p1 - 1,
     p1[-1], p2 - 1, p2[-1]);
 if( prt > maxpr )
  printf("Total of %d differences\n", prt);
}
